# wmb-agent

./: .env.example  .gitignore  AGENT_ONBOARDING.md  OPERATION_FLOW.md  README.md  pyproject.toml
env/: git-push.example.env
env/profiles/: dev.env  hq.env  stable.env
scripts/: git-push.sh  start-agent-dev.sh  start-agent-hq.sh  start-agent-stable.sh  start-agent.sh  switch-model-mode.sh
skills/imported/: README.md
skills/standardized/: ApiDocSkill.md  BackendCodeReadSkill.md  BackendCodeWriteSkill.md  BackendTestSkill.md  CodeRuleCheckSkill.md  DBStructSkill.md  DevOpsSkill.md  FrontendCodeReadSkill.md  FrontendCodeWriteSkill.md  FrontendTestSkill.md  FrontendUISkill.md  MonitorSkill.md  README.md  skill-manifest.standard.json
src/beauty_saas_agent/: __init__.py  agent_planner.py  agent_registry.py  bug_triage_config.py  cli.py  config.py  docx_loader.py  execution_diagnostics.py  github_skill_importer.py  models.py  plugin_skill_loader.py  project_memory.py  prompt_builder.py  prompt_parser.py  prompt_registry.py  qwen_client.py  repo_manager.py  server.py  (+6 more)
tests/: test_agent_planner.py  test_bug_triage_config.py  test_config.py  test_docx_loader.py  test_execution_diagnostics.py  test_execution_workflow_mapping.py  test_github_skill_importer.py  test_plugin_skill_loader.py  test_project_memory.py  test_prompt_parser.py  test_prompt_registry.py  test_prompt_runtime_execution.py  test_qwen_client_resilience.py  test_repo_manager_execution.py  test_skill_plugin_registry.py  test_skill_templates.py  test_task_store.py  test_workflows.py  test_workspace_profile.py
(+36 files in other folders)
