[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beauty-saas-agent"
version = "0.1.0"
description = "A local agent runtime for Beauty SaaS workflows backed by a local Qwen model."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.scripts]
beauty-agent = "beauty_saas_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
